--- a/app/assets/stylesheets/card-perma.css
+++ b/app/assets/stylesheets/card-perma.css
@@ -41,6 +41,17 @@
       max-inline-size: 32ch;
     }
 
+    .collection-picker__button {
+      --btn-border-size: 0;
+    
+      font-size: 0.5em;
+      margin-inline-start: 1ch;
+  
+      + .panel {
+        --panel-size: 18ch;
+      }
+    }
+
     @media (max-width: 800px) {
       --padding-inline: 3cqmin;
 
