--- a/app/views/cards/_container.html.erb
+++ b/app/views/cards/_container.html.erb
@@ -10,12 +10,7 @@
   <div class="card-perma__bg">
     <%= card_article_tag card, class: "card" do %>
       <header class="card__header">
-        <span class="card__collection">
-          <span class="card__id"><%= card.id %></span>
-          <%= link_to card.collection.name, cards_path(collection_ids: [ card.collection ]),
-                class: "card__collection-name overflow-ellipsis" %>
-        </span>
-
+        <%= render "cards/display/perma/collection", card: card %>
         <%= render "cards/display/perma/tags", card: card %>
       </header>
 
