Refactor to introduce an entropy model
Instead of keeping two tracks of similar logic (auto-reconsider / auto-close).

--- a/app/views/cards/display/_preview.html.erb
+++ b/app/views/cards/display/_preview.html.erb
@@ -29,7 +29,7 @@
 
     <%= render "cards/display/common/background", card: card %>
 
-    <% if card.subject_to_entropy? %>
+    <% if card.has_entropy? %>
       <%= render "cards/display/preview/bubble", card: card %>
     <% end %>
   <% end %>
