--- a/app/views/cards/container/_closure.html.erb
+++ b/app/views/cards/container/_closure.html.erb
@@ -22,10 +22,12 @@
     </details>
 
     <span class="card-perma__closure-message">
-      <% if card.doing? %>
-        Falls back to <em>Considering</em> if no activity <%= local_datetime_tag(card.auto_reconsider_at, style: :indays) -%>.
-      <% elsif card.auto_closing? %>
-        Auto-closes if no activity <%= local_datetime_tag(card.auto_close_at, style: :indays) -%>.
+      <% if card.has_entropy? %>
+        <% if card.doing? %>
+          Falls back to <em>Considering</em> if no activity <%= local_datetime_tag(card.entropy.auto_clean_at, style: :indays) -%>.
+        <% else %>
+          Auto-closes if no activity <%= local_datetime_tag(card.entropy.auto_clean_at, style: :indays) -%>.
+        <% end %>
       <% end %>
     </span>
   <% end %>
