Reorganize ƒilter's menu templates (WIP)

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
 <% content_for :header do %>
   <nav class="header">
     <header class="center">
-      <%= render "events/filter", filter: @filter %>
+      <%= render "filters/menu", user_filtering: @user_filtering %>
     </header>
   </nav>
 <% end %>
